working on template

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,12 @@
     "incremental": true
   },
   "include": [
+    ".eslintrc.js",
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.js",
+    "**/*.tsx",
+    "**/*.jsx"
   ],
   "exclude": [
     "node_modules"
