--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "analyze": "ANALYZE=true next build",
     "start": "next start",
@@ -18,7 +18,9 @@
     "@mantine/next": "4.0.6",
     "@mantine/notifications": "4.0.6",
     "@mantine/prism": "4.0.6",
+    "axios": "^0.26.1",
     "cookies-next": "^2.0.4",
+    "date-fns": "^2.28.0",
     "dayjs": "^1.10.8",
     "next": "12.1.0",
     "prism-react-renderer": "^1.3.1",
