--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "cookies-next": "^2.0.4",
     "date-fns": "^2.28.0",
     "dayjs": "^1.10.8",
+    "google-map-react": "^2.1.10",
     "next": "12.1.0",
     "prism-react-renderer": "^1.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "tabler-icons-react": "^1.39.0"
+    "tabler-icons-react": "^1.39.0",
+    "use-position": "^1.0.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.1.0",
